--- a/lastfm/lastfm.popclipext/Config.plist
+++ b/lastfm/lastfm.popclipext/Config.plist
@@ -21,7 +21,17 @@
 		<key>Title</key>
 		<string>Top10 Albums</string>
 		</dict>
-	</array>	
+		<dict>
+		<key>After</key>
+		<string>paste-result</string>
+		<key>Shell Script File</key>
+		<string>toptensingles.rb</string>
+		<key>Script Interpreter</key>
+		<string>/usr/bin/ruby</string>
+		<key>Title</key>
+		<string>Top10 Singles</string>
+		</dict>
+		 </array>	
 <key>Credits</key>
 <array>
 	<dict>
